syntax = "proto3";

package interaction;

option go_package = "github.com/Yux77Yux/platform_backend/generated/interaction";

import "google/api/annotations.proto";

import "interaction/methods/post.proto";
import "interaction/methods/get.proto";
import "interaction/methods/update.proto";

service InteractionService {
  // POST
  // 这个为展示完视频信息之后再查看是否登录，判断是否发送事件
  rpc PostInteraction(interaction.methods.PostInteractionRequest) returns (interaction.methods.PostInteractionResponse);

  // Get
  rpc GetRecommend(interaction.methods.GetRecommendRequest) returns (interaction.methods.GetRecommendResponse);

  // 这个为展示完视频信息之后再查看是否登录，再盘点是否已经点赞过
  rpc GetActionTag(interaction.methods.GetCreationInteractionRequest) returns (interaction.methods.GetCreationInteractionResponse);

  rpc GetHistories(interaction.methods.GetHistoriesRequest) returns (interaction.methods.GetInteractionsResponse);

  rpc GetCollections(interaction.methods.GetCollectionsRequest) returns (interaction.methods.GetInteractionsResponse);

  // UPDATE
  // 实际是修改对于的action tag

  rpc ClickCollection(interaction.methods.UpdateInteractionRequest) returns (interaction.methods.UpdateInteractionResponse) {
    option (google.api.http) = {
      patch: "/api/interaction/collection"
      body: "*"
    };
  }

  rpc ClickLike(interaction.methods.UpdateInteractionRequest) returns (interaction.methods.UpdateInteractionResponse) {
    option (google.api.http) = {
      patch: "/api/interaction/like"
      body: "*"
    };
  }

  rpc CancelCollections(interaction.methods.UpdateInteractionsRequest) returns (interaction.methods.UpdateInteractionResponse) {
    option (google.api.http) = {
      patch: "/api/interaction/collection/cancel"
      body: "*"
    };
  }

  rpc DelHistories(interaction.methods.UpdateInteractionsRequest) returns (interaction.methods.UpdateInteractionResponse) {
    option (google.api.http) = {
      patch: "/api/interaction/history"
      body: "*"
    };
  }

  rpc CancelLike(interaction.methods.UpdateInteractionRequest) returns (interaction.methods.UpdateInteractionResponse) {
    option (google.api.http) = {
      patch: "/api/interaction/like/cancel"
      body: "*"
    };
  }
}